# breast-cancer-screening-auroc

./: .gitignore  AGENTS.md  README.md  SUBMISSION_RECOMMENDATION.md  main.py  pyproject.toml  submission_recommended_splitv2_plus_pairedlr8e4.csv
configs/: baseline.yaml  baseline_fusion_mlp_gelu_d0.yaml  baseline_fusion_mlp_gelu_d0_epochs12.yaml  baseline_fusion_mlp_gelu_d0_seed123.yaml  baseline_fusion_mlp_gelu_d10.yaml  baseline_fusion_mlp_gelu_d10_epochs12.yaml  baseline_fusion_mlp_gelu_d10_seed123.yaml  baseline_fusion_mlp_relu_d10.yaml  baseline_fusion_mlp_relu_d10_epochs12.yaml  baseline_fusion_mlp_relu_d10_seed123.yaml  baseline_mammonet32k_levit_128s_nowarmup_f5_e6_freeze1_cosine_splitv2.yaml  baseline_mammonet32k_levit_128s_warmup_e2_f5_e6_freeze1_cosine_splitv2.yaml  baseline_mammonet32k_mainline_v1.yaml  baseline_mammonet32k_mainline_v1_f5.yaml  baseline_mammonet32k_mainline_v1_f5_splitv2.yaml  baseline_mammonet32k_mainline_v1_seed123.yaml  baseline_mammonet32k_mobilevitv2_100_warmup_e2_f5_e6_freeze1_cosine_splitv2.yaml  baseline_mammonet32k_warmup.yaml  baseline_mammonet32k_warmup_e4.yaml  baseline_mammonet32k_warmup_e4_lr5e4.yaml  baseline_mammonet32k_warmup_e4_lr5e4_cv3_control.yaml  baseline_mammonet32k_warmup_e4_lr5e4_cv3_control_seed123.yaml  baseline_mammonet32k_warmup_e4_lr5e4_cv3_e6.yaml  baseline_mammonet32k_warmup_e4_lr5e4_cv3_e6_freeze1.yaml  baseline_mammonet32k_warmup_e4_lr5e4_cv3_e6_freeze1_cosine.yaml  baseline_mammonet32k_warmup_e4_lr5e4_cv3_e6_freeze1_cosine_normonly.yaml  baseline_mammonet32k_warmup_e4_lr5e4_cv3_e6_freeze1_cosine_seed123.yaml  (+33 more)
(+52 files in other folders)
